#pragma once
#include <memory>
#include <string>
#include "device.hpp"
#include "../common.hpp"

namespace device {

class Registry : public IMessageRouter {
public:
    explicit Registry(EventBus& evBus)
        : eventBus(evBus)
    {}
   
    void load(const std::string& filename);
    void route(const std::string& topic, const std::string& payload) override;

    std::shared_ptr<Device> getByName(const std::string& name) const {
        if (auto it = devices_.find(name); it != devices_.end()) {
            return it->second;
        }
        return nullptr;
    }

private:
    EventBus& eventBus;

    std::shared_ptr<Device> getDevice(const std::string& name) {
        if (auto it = devices_.find(name); it != devices_.end()) {
            return it->second;
        }
        return nullptr;
    }

    std::shared_ptr<Device> createDevice(
        const std::string& name,
        const std::string& type,
        EventBus& eventBus) const;

    std::unordered_map<std::string, std::shared_ptr<Device>> devices_;
};

}  // namespace device
