#pragma once
#include <spdlog/spdlog.h>
#include "device.hpp"

namespace device {

class SwitchDevice : public Device {
public:
    explicit SwitchDevice(const std::string& name, EventBus& evbus) :
        Device(name, evbus)
    {}

    void reset() {
        first_time = true;
        last_state = false;
    }

    void onMessage(const std::string& _deviceName, nlohmann::json& payload) override {
        bool state;

        if (deviceName != _deviceName) { // this message was not for me
            return;
        }

        if (payload.contains("state")) {
            const auto& j = payload["state"];
            if (j.is_string()) {
                state = j.get<std::string>() == "ON";
            } else if (j.is_boolean()) {
                state = j.get<bool>();
            } else if (j.is_number_integer()) {
                state = j.get<int>() != 0;
            } else if (j.is_null()) {
                spdlog::warn("Switch {}: 'state' is null, ignoring", deviceName);
                return;
            } else {
                spdlog::warn("Switch {}: unexpected type for 'state'", deviceName);
                return;
            }
        } else if (payload.contains("action")) {
            const auto& j = payload["action"];
            if (j.is_string()) {
                const std::string s = j.get<std::string>();
                if (s == "on") state = true;
                else if (s == "off") state = false;
                else if (s == "brightness_move_up") state = true;
                else if (s == "brightness_move_down") state = false;
                else if (s == "brightness_stop") {
                    return; // ignore, we only care about on/off state
                }
                else {
                    spdlog::warn("Switch {}: unknown action '{}'", deviceName, s);
                    return;
                }
            } else if (j.is_boolean()) {
                state = j.get<bool>();
            } else if (j.is_null()) {
                spdlog::warn("Switch {}: 'action' is null, ignoring", deviceName);
                return;
            } else {
                spdlog::warn("Switch {}: unexpected type for 'action'", deviceName);
                return;
            }
        } else {
            // No relevant field found
            return;
        }

        if (first_time || (state != last_state)) {
            evbus.publish(SwitchEvent(deviceName, state));
            last_state = state;
            first_time = false;
        }
    }

private:
    bool last_state = false;
    bool first_time = true;
};

}  // namespace device
